# EE450Project

./: CMakeLists.txt  Constants.cpp  Constants.h  Dictionary.cpp  Dictionary.h  FileReader.cpp  FileReader.h  aws.cpp  aws.h  client.cpp  client.h  dictionary.cpp  dictionary.h  main.cpp  monitor.cpp  monitor.h  server.cpp  server.h  serverA.cpp  serverA.h  serverB.cpp  serverB.h  serverC.cpp  serverC.h
